# humchop

./: .gitignore  Cargo.toml  DEBUG.md  PLAN.md  QWEN.md  README.md  REVIEW.md  SPEC.md  TESTING.md  TODO.md  mapper.rs
.github/workflows/: ci.yml
src/: audio_utils.rs  constants.rs  error.rs  hum_analyzer.rs  main.rs  mapper.rs  player.rs  recorder.rs  sample_chopper.rs  tui.rs
