[package]
name = "humchop"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["HumChop Contributors"]
license = "MIT OR Apache-2.0"
description = "Hum-to-chop sampling tool - chop samples by humming melodies"

[features]
default = ["audio-io"]
# Audio recording and playback (requires ALSA/PulseAudio system libraries)
audio-io = ["cpal", "rodio"]
# Core functionality only (no system audio dependencies)
core-only = []

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

# Audio file I/O (no system dependencies)
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }

# DSP
rubato = "0.15"
rustfft = "6.2"
dasp = { version = "0.11", features = ["signal", "interpolate"] }
pitch-detection = "0.3"

# Error handling & logging
anyhow = "1"
env_logger = "0.11"
colored = "2"

# TUI (no system dependencies)
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Optional: Audio recording/playback (requires system audio libraries)
cpal = { version = "0.17", optional = true }
rodio = { version = "0.19", default-features = false, features = ["symphonia-mp3", "symphonia-flac"], optional = true }

[dev-dependencies]
tempfile = "3"